2007-06-03  Luca Bruno  <lethalman88@gmail.com>

	* Added a TODO file
	* syx-utils.c (syx_path_join): some stylistic fixes

	* Added Doxygen documentation

	* syx-types.h: defining TRUE and FALSE booleans when not defined (e.g. when not including glib.h)
	* syx-types.h (SYX_SMALL_INTEGER): use double shifting instead of AND/INVERT
	* syx-object.c (syx_class_lookup_method): added function and removed the issued macro
	* syx-utils.c: removed GError when not needed
	* syx-init.c: removed unused GHashTable
	* syx-interp.c (syx_exec_state_free): added inline function
	* syx-interp.c (syx_exec_state_save): fixed saving the execution state of a process
	* Removed all G_BEGIN_DECLS / G_END_DECLS to make use of Doxygen

2007-06-01  Luca Bruno  <lethalman88@gmail.com>

	* configure.ac: override standard CFLAGS
	* syx-object.c (syx_dictionary_at_symbol_put): return once we found the right place to put the data
	* syx-object.c (syx_metaclass_new, syx_class_new): avoid nil values to speed up lookups
	* syx-object.c (syx_symbol_new): put the symbol itself instead of SYX_TRUE
	* syx-enums.h (SyxTokenType): put string-based token types at the end so that syx_token_free can free strings
	* syx-lexer.h: Added SyxToken structure to get rid of GValue
	* syx-lexer.c: removed GValue dependency and Glib ascii functions usage
	Renamed all static functions
	All parts of Syx have been updated with the new behavior of the lexer, including the parser and the tests
	* syx-lexer.c (syx_lexer_free): added function
	* syx-lexer.c (syx_token_free): added function
	* syx-bytecode.c (syx_bytecode_free): added function
	* syx-parser.c (syx_parser_free): added function
	Renamed all static functions.
	* syx-utils.c: completely refactored without using Glib
	* syx-utils.h: removed G_VALUE_STRCMP
	* Replaced all g_strcasecmp and g_strdup with strcmp and strdup
	* syx-init.c (syx_init): removed g_type_init, we do not need GObject for GValue anymore