@@ -1,6 +1,5 @@
 SUBDIRS = syx plugins tests
 
-CFLAGS = "-Wall -g -O2"
 EXTRA_DIST = syx.pc.in st
 
 pkgconfigdir = $(libdir)/pkgconfig
